--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 [toolchain]
 channel = "stable"
 
+[profile.release]
+strip = true
+lto = true
+codegen-units = 1
+
 [[bin]]
 name="create-mnt-app"
 path = "cli/cli.rs"
@@ -13,9 +18,10 @@ path = "cli/cli.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 dialoguer = "0.10.3"
+duct = "0.13.6"
 names = "0.14.0"
 rust-embed = "6.6.0"
-serde = "1.0.153"
+serde = { version = "1.0", features = ["derive"] }
 spinach = "2.1.0"
 strum = "0.24.1"
 strum_macros = "0.24.3"
