--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "create-mnt-app"
 version = "0.1.0"
 edition = "2021"
+description = "Quickly setup a new project. A colocation of all my boilerplate code"
+license = "ISC"
+homepage = "https://github.com/MNThomson/create-mnt-app"
 
 [toolchain]
 channel = "stable"
@@ -15,7 +18,6 @@ codegen-units = 1
 name="create-mnt-app"
 path = "cli/cli.rs"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 dialoguer = "0.10.3"
 duct = "0.13.6"
